force-app/main/default/objects/tdc_cti__User_Status__c/fields/tdc_cti__Diff__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Diff__c</fullName>
    <description>It gets the date and the time when the status changes from online to away or offline.</description>
    <label>In Time</label>
    <type>DateTime</type>
</CustomField>