force-app/main/default/objects/tdc_cti__User_Status__c/fields/tdc_cti__Duration__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Duration__c</fullName>
    <description>Provides the date on which the status is changed</description>
    <label>Today&apos;s Date</label>
    <type>DateTime</type>
</CustomField>