force-app/main/default/objects/tdc_cti__User_Status__c/fields/tdc_cti__Duration_Track__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Duration_Track__c</fullName>
    <description>Maintain the in and out time as to when the status was changed from online to away or offline [IN TIME] and when it gets changed from offline or away to online [OUT TIME]</description>
    <label>Duration Track</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>