force-app/main/default/objects/tdc_cti__User_Status__c/fields/tdc_cti__Main_option__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Main_option__c</fullName>
    <description>The main option of the or the status of the cti eg.{Away/Offline}</description>
    <label>Main Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>