force-app/main/default/objects/tdc_cti__User_Status__c/fields/tdc_cti__Out_Time__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Out_Time__c</fullName>
    <description>The out time is used to track the date and time when the user has changed the status from Away/Offline to online</description>
    <label>Out Time</label>
    <type>DateTime</type>
</CustomField>