force-app/main/default/objects/tdc_cti__User_Status__c/fields/tdc_cti__Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Phone_Number__c</fullName>
    <description>Provides the phone number of the user on which the status is getting changed</description>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>