force-app/main/default/objects/tdc_cti__User_Status__c/fields/tdc_cti__SMS_APP_Number__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__SMS_APP_Number__c</fullName>
    <description>Provides the SMS APP Number</description>
    <label>SMS APP Number</label>
    <referenceTo>tdc_tsw__SMS_APP_Number__c</referenceTo>
    <relationshipLabel>User Status</relationshipLabel>
    <relationshipName>User_Status</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>