force-app/main/default/objects/tdc_cti__User_Status__c/fields/tdc_cti__Status_del__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Status_del__c</fullName>
    <description>Provides the sub status choosen by the user of the main status [For Away - Lunch,Tea/Offline - Offline/Holiday]</description>
    <label>Sub Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>