force-app/main/default/objects/tdc_cti__User_Status__c/fields/tdc_cti__Total_Duration_In_minutes__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Total_Duration_In_minutes__c</fullName>
    <description>Provides the total duration in minutes of the status changed form online to away or offline</description>
    <label>Total Duration(In minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>