force-app/main/default/objects/tdc_cti__User_Status__c/fields/tdc_cti__Total_Durationn__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Total_Durationn__c</fullName>
    <description>Keeps track of the latest in and out time for a status and then calculate the difference between them</description>
    <formula>( tdc_cti__Out_Time__c - tdc_cti__Diff__c )*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>