force-app/main/default/objects/tdc_cti__User_Status__c/fields/tdc_cti__User__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Show the user name to which the record belongs to</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Status</relationshipName>
    <type>Lookup</type>
</CustomField>