force-app/main/default/objects/tdc_cti__User_Status__c/listViews/tdc_cti__All.listView-meta.xml
<ListView>
    <fullName>tdc_cti__All</fullName>
    <columns>NAME</columns>
    <columns>tdc_cti__Duration_Track__c</columns>
    <columns>tdc_cti__Diff__c</columns>
    <columns>tdc_cti__Out_Time__c</columns>
    <columns>tdc_cti__Phone_Number__c</columns>
    <columns>tdc_cti__SMS_APP_Number__c</columns>
    <columns>tdc_cti__User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>